unsavedfiles: store temporary files in .cache/gnome-builder/buffers

We need a location for temporary files that allows us to access them from
the host system (in the case we are moving between flatpak to host).

https://bugzilla.gnome.org/show_bug.cgi?id=779335